--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 startTime,endTime,speaker
 08:00,09:00,Coffee / Find your seat
 09:00,09:15,Olof Mogren
-09:15,10:00,Keynote 1: Oisin Mac Aodha
-10:00,10:20,Oral: Edmond Sacre
-10:20,10:40,Oral: Hilda Sandström
+09:15,10:00,Keynote 1: Speaker Mac Speak
+10:00,10:20,Oral: Prof. Serif De Weave
+10:20,10:40,Oral: Dr. Zephyr CyberQuery
 10:40,11:10,Coffee break
-11:10,11:40,Oral: Dan Stowell
-11:40,12:00,Oral: John Martinsson
+11:10,11:40,Oral: Byte O'Graph
+11:40,12:00,Oral: Delta Van Logic
 12:00,13:15,Lunch
-13:15,14:00,Keynote 2: Christian Igel
-14:00,14:20,Oral: Nico Lang
-14:20,14:40,Oral: Stefanos Georganos
+13:15,14:00,Keynote 2: Lumen McData
+14:00,14:20,Oral: Vector NetWrite
+14:20,14:40,Oral: Halcyon FitzModel
 14:40,15:10,Coffee
-15:10,15:30,Oral: Alouette van Hove
-15:30,15:50,Oral: Shorouq Zahra
-15:50,16:10,Oral: David Thulke
+15:10,15:30,Oral: Echo MacFlow
+15:30,15:50,Oral: Mr. Orion Le Test
+15:50,16:10,Oral: Pixel Speak
 16:10,16:20,Concluding remarks
 16:20,18:00,Posters and mingle
 18:00,18:01,Relocation to dinner
